test/Fail/AbstractModuleMacro.agda
module AbstractModuleMacro where

import Common.Issue481Parametrized as P

abstract
  module M = P Set
